# ZoTunnel

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-main.yml  ci.yml  release.yml
configs/: client.yaml  server.example.yaml
crates/zo-tunnel-client/: Cargo.toml
crates/zo-tunnel-client/src/: client.rs  config.rs  main.rs
crates/zo-tunnel-protocol/: Cargo.toml
crates/zo-tunnel-protocol/src/: lib.rs  self_update.rs
crates/zo-tunnel-server/: Cargo.toml
crates/zo-tunnel-server/src/: config.rs  dashboard.rs  main.rs  metrics.rs  proxy.rs  registry.rs  server.rs  traefik.rs
deploy/traefik/: traefik.yml
scripts/: build.sh  e2e_test.sh  install.sh  pre-release.sh  release.sh
web/: app.js  index.html  style.css
