[package]
name = "zo-tunnel-client"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Zo Tunnel client CLI (zotunnel) — expose local HTTP apps"

[[bin]]
name = "zotunnel"
path = "src/main.rs"

[dependencies]
zo-tunnel-protocol = { path = "../zo-tunnel-protocol" }
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
yamux = { workspace = true }
futures = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = { workspace = true }
getrandom = "0.2"
socket2 = { workspace = true }
libc = "0.2"
