[package]
name = "zo-tunnel-protocol"
version = "0.0.2"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared protocol types for Zo Tunnel"

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
